@@ -1,0 +1,117 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>sffinfo workflow</name>
+        <!--Preprocessing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create output directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+        </command>
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create temporary directory</name>
+            <state>incomplete</state>
+            <executable>mkdir</executable>
+            <arg>-p -m 777 $;TMP_DIR$;</arg>
+        </command>
+        <!--Processing-->
+        <!--Iterator-->
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML">
+        <!--Post-processing-->
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create accession output list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.acc"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;ACCESSION_OUTPUT_LIST$;</value>
+            </param>
+        </command>         
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create sequence output list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.fsa"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;SEQUENCE_OUTPUT_LIST$;</value>
+            </param>
+        </command>     
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create quality output list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.qual"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;QUALITY_OUTPUT_LIST$;</value>
+            </param>
+        </command>  
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create flowgram output list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.flow"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;FLOWGRAM_OUTPUT_LIST$;</value>
+            </param>
+        </command>      
+        <command>
+            <type>RunUnixCommand</type>
+            <name>create tabular output list</name>
+            <state>incomplete</state>
+            <executable>$;BIN_DIR$;/create_list_file</executable>
+            <param>
+                <key>--directory</key>
+                <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+                <key>--regex</key>
+                <value>".*\.tab"</value>
+            </param>
+            <param>
+                <key>--output_list</key>
+                <value>$;TAB_OUTPUT_LIST$;</value>
+            </param>
+        </command>                                                                                      
+    </commandSet>
+</commandSetRoot>        
