@@ -1,5 +1,6 @@
 next
 ----
+-sffinfo: new component
 -p_func/parse_evidence: Database path is now configurable
 -metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
 -translate_sequence: added option to delete any fasta files generated by component that aren't gene/polypeptide sequences.
